--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root{
     --branco: rgb(255, 255, 255);
-    --cor-de-fundo: #000000;
+    --cor-de-fundo: #6e2121;
     --fundo-senha: hsl(0, 0%, 100%);
     --fundo-texto: #942f2f;
     --borda: #742323;
