--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     --branco: rgb(255, 255, 255);
     --cor-de-fundo: #6e2121;
     --fundo-senha: hsl(0, 0%, 0%);
-    --fundo-texto: #942f2f;
-    --borda: #742323;
+    --fundo-texto: #6d2626;
+    --borda: #6b2020;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
