--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --cor-de-fundo: #6e2121;
     --fundo-senha: hsl(0, 0%, 0%);
     --fundo-texto: #6d2626;
-    --borda: #ffffff;
+    --borda: #a81a1a;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
